hphp/test/slow/class_type_constant/type_constant18.php.expectf
Fatal error: Class C contains abstract type constant (T) and therefore cannot be declared 'abstract final' in %s on line 3
